// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`getGitCommits > with custom trailer 1`] = `
[
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "some long description
",
    "hash": "1dfaff1",
    "subject": "test(git): test commit with something",
    "tags": [
      "v1.0.5",
      "v1.0.1",
    ],
    "trailers": [
      {
        "token": "BREAKING CHANGE",
        "value": "Some breaky change",
      },
      {
        "token": "fix",
        "value": "#123",
      },
    ],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "5a84e8d",
    "subject": "chore: disable auto release",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "github-actions[bot]@users.noreply.github.com",
    "authorName": "github-actions[bot]",
    "body": "",
    "hash": "cde6098",
    "subject": "chore: release @wroud/di@0.9.1",
    "tags": [
      "di-v0.9.1",
    ],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "26768a0",
    "subject": "fix: add automated releases",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "ca0db97",
    "subject": "feat: update github workflows",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "d9774d6",
    "subject": "ci: inherit secrets in workflows",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "afa7fd3",
    "subject": "chore: fix readme",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "github-actions[bot]@users.noreply.github.com",
    "authorName": "github-actions[bot]",
    "body": "",
    "hash": "1624c31",
    "subject": "chore: release @wroud/di@0.9.0",
    "tags": [
      "di-v0.9.0",
    ],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "0848e0a",
    "subject": "ci: fix workflows",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "82e92ef",
    "subject": "ci: enable corepack",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "3e25589",
    "subject": "chore: remove yarn cache",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "2c35601",
    "subject": "ci: update dependencies and github workflows",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "0c0e299",
    "subject": "chore: remove test from readme",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "02df602",
    "subject": "ci: rewrite bump resolver",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "github-actions[bot]@users.noreply.github.com",
    "authorName": "github-actions[bot]",
    "body": "",
    "hash": "e801bdb",
    "subject": "chore: release @wroud/di@0.8.5",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "d824036",
    "subject": "ci: add package name to releases",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "01e09a8",
    "subject": "ci: properly handle errors",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "c3378cc",
    "subject": "ci: commit as github actions bot",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "github-actions@github.com",
    "authorName": "github-actions",
    "body": "",
    "hash": "041d000",
    "subject": "chore: release 0.8.4",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "cc0fe8a",
    "subject": "ci: trigger update",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "b58a7dd",
    "subject": "ci: configure publishing github releases",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "github-actions@github.com",
    "authorName": "github-actions",
    "body": "",
    "hash": "e514809",
    "subject": "chore: release 0.8.3",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "48cc6f1",
    "subject": "ci: filter release commit only for bump check",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "github-actions@github.com",
    "authorName": "github-actions",
    "body": "",
    "hash": "a80b948",
    "subject": "chore: release 0.8.2",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "4262c3b",
    "subject": "chore: push annotated tags",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "github-actions@github.com",
    "authorName": "github-actions",
    "body": "",
    "hash": "a251066",
    "subject": "chore: release 0.8.1",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "fc02a0d",
    "subject": "chore: trigger release",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "github-actions@github.com",
    "authorName": "github-actions",
    "body": "",
    "hash": "9ff54fc",
    "subject": "chore: release 0.8.0",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "a9443ec",
    "subject": "ci: push fixed tag",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "github-actions@github.com",
    "authorName": "github-actions",
    "body": "",
    "hash": "55a315c",
    "subject": "chore: release 0.7.0",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "4a6430d",
    "subject": "chore: add changelog for di",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "github-actions@github.com",
    "authorName": "github-actions",
    "body": "",
    "hash": "5a14585",
    "subject": "chore: release 0.6.0",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Alexey",
    "body": "* chore: rebase

* test: fix tests",
    "hash": "f9f8224",
    "subject": "chore: rebase (#15)",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Alexey",
    "body": "* ci: configure gulp

* ci: read package version directly

* ci: skip release commits

* ci: enable github releases

* ci: remove changelog",
    "hash": "d2ea47b",
    "subject": "Ci/configure gulp for ci (#14)",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "github-actions@github.com",
    "authorName": "github-actions",
    "body": "",
    "hash": "e0dd0e5",
    "subject": "chore: release undefined",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Alexey",
    "body": "* ci: configure gulp

* ci: read package version directly

* ci: skip release commits",
    "hash": "5b43fb0",
    "subject": "Ci/configure gulp for ci (#13)",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "github-actions@github.com",
    "authorName": "github-actions",
    "body": "",
    "hash": "dc0f7d0",
    "subject": "chore: release undefined",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Alexey",
    "body": "* ci: configure gulp

* ci: read package version directly",
    "hash": "3ef2856",
    "subject": "Ci/configure gulp for ci (#12)",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Alexey",
    "body": "",
    "hash": "f6d4755",
    "subject": "ci: configure gulp (#11)",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Alexey",
    "body": "",
    "hash": "cf5ef0c",
    "subject": "ci: add empty placeholder command ci:prepublish (#10)",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "github-actions@github.com",
    "authorName": "github-actions",
    "body": "",
    "hash": "d8a8ebe",
    "subject": "Release di-v0.5.0",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Alexey",
    "body": "* ci: fail on empty commits

* ci: commit lockfile",
    "hash": "71d3bf2",
    "subject": "ci: fail on empty commits (#9)",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "github-actions@github.com",
    "authorName": "github-actions",
    "body": "",
    "hash": "bd5311a",
    "subject": "Release v0.4.3",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "github-actions@github.com",
    "authorName": "github-actions",
    "body": "",
    "hash": "ff36f54",
    "subject": "Release v0.4.2",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "github-actions@github.com",
    "authorName": "github-actions",
    "body": "",
    "hash": "231a0aa",
    "subject": "Release v0.4.1",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "github-actions@github.com",
    "authorName": "github-actions",
    "body": "",
    "hash": "5dfac88",
    "subject": "Release v0.4.0",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Alexey",
    "body": "",
    "hash": "e839687",
    "subject": "ci: run prepublish scripts",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "github-actions@github.com",
    "authorName": "github-actions",
    "body": "",
    "hash": "c15cea7",
    "subject": "Release v0.3.1",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "github-actions@github.com",
    "authorName": "github-actions",
    "body": "",
    "hash": "5591856",
    "subject": "Release v0.3.0",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Alexey",
    "body": "* ci: run prepublish scripts

* ci: use different method for brunch detection

* ci: fix release workflow

* ci: setup path to vitest config

* ci: configure github actions commit",
    "hash": "6bf7753",
    "subject": "Ci/run prepublish scripts (#7)",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Alexey",
    "body": "* ci: run prepublish scripts

* ci: use different method for brunch detection

* ci: fix release workflow

* ci: setup path to vitest config",
    "hash": "82d6875",
    "subject": "Ci/run prepublish scripts (#6)",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Alexey",
    "body": "* ci: run prepublish scripts

* ci: use different method for brunch detection",
    "hash": "b24e2c2",
    "subject": "ci: run prepublish scripts (#5)",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Alexey",
    "body": "* ci: add changelog and automatic releases

* ci: coverage report fix

* ci: sanitize branch name in github workflows",
    "hash": "c5af8e3",
    "subject": "ci: add changelog and automatic releases (#4)",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "d31ce7b",
    "subject": "chore(di-react): optimize useAbandonedRenderDisposer timeout",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "ccfac38",
    "subject": "chore(react): update readme",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "dedfddd",
    "subject": "chore: update docs",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "717c44e",
    "subject": "chore: update docs for di",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "0a79da6",
    "subject": "chore: Update @wroud/di-react package version to 0.0.2 and add React bindings for DI",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "65698ad",
    "subject": "chore: Update package versions for @wroud/di-tools-analyzer, @wroud/di-tools-codemod, and @wroud/di to 0.1.0, 0.1.0, and 0.2.0 respectively",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "fcf6004",
    "subject": "chore: update deps",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "5cb14f4",
    "subject": "chore(di-react): add react bindings for di",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "30807d4",
    "subject": "chore(di): reorganize exports",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "8615243",
    "subject": "chore: update imports for di-tools-analyzer",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "4e236f3",
    "subject": "chore: update exports",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "74656a2",
    "subject": "chore: add documentation about lazy",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "0a74691",
    "subject": "chore: Update @wroud/di package to version 0.1.5 and include production module",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "392170e",
    "subject": "chore: Bump @wroud/di version to 0.1.4",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "1023ebc",
    "subject": "chore: add better debugging and optimized production build",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "8e5da34",
    "subject": "chore: Fix import in injectable.test.ts",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "6c78545",
    "subject": "chore: update unit tests",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "2f82db3",
    "subject": "chore: Update @wroud/di to version 0.1.3",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "0e80287",
    "subject": "chore: Exclude test files from package build",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "6357a3a",
    "subject": "chore: Update @wroud/di to version 0.1.2",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "e7c2505",
    "subject": "chore: update dependencies",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "258b0ec",
    "subject": "chore: bump version @wroud/di to 0.1.1",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "0d861be",
    "subject": "chore: rename diLazy -> lazy",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "b3fb16c",
    "subject": "chore: update vitest to 2 version",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "5d407ee",
    "subject": "chore: bump version @wroud/di to 0.1.0",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "792d6b6",
    "subject": "feat: lazy implementation loading",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "387a1fc",
    "subject": "chore: rename IServiceImplementation to ISyncServiceImplementation",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "65bf5af",
    "subject": "chore: split logic",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "7dbff6d",
    "subject": "chore: rename configs",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "d5ac8c0",
    "subject": "fix: ci-cd",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "dcf424a",
    "subject": "fix: tsconfig",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "802ee0c",
    "subject": "chore: update yarn.lock",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "412907f",
    "subject": "chore: migrate to vitest",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "0c7228a",
    "subject": "fix: cyclic dependencies detection",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "43a43b5",
    "subject": "fix: change package type",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "6773df2",
    "subject": "chore: change output to commonjs",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "4672641",
    "subject": "fix: run as common js module",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "6ed140b",
    "subject": "chore: update dependencies",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "b392ebf",
    "subject": "chore: update bin",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "b65f7e9",
    "subject": "fix: exports",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "1c4c04c",
    "subject": "feat: @wroud/di-tools-codemod",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "712d055",
    "subject": "chore: bump \`@wroud/di-tools-analyzer\` version",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "e5142e0",
    "subject": "docs: ModuleRegistry api",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "d7ef251",
    "subject": "feat: add full screen mode for di analyzer",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "52276d5",
    "subject": "docs: add documentation for @wroud/di-tools-analyzer",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "5e5e195",
    "subject": "fix: robots.txt name",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "19bdf3b",
    "subject": "feat: add robots.txt",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "f40e2f7",
    "subject": "chore: tune layout",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "3aa1529",
    "subject": "fix: graph example",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "6379e3f",
    "subject": "feat: move graph to another page",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "5ce1124",
    "subject": "feat: add di analyzer",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "cf852fa",
    "subject": "docs: remove extra",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "5f55b1c",
    "subject": "docs: make examples simpler",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "f76c015",
    "subject": "docs: simplify samples",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "33c7dd4",
    "subject": "docs: add "Why DI?" page",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "2f89822",
    "subject": "chore: move tsconfig to separate package",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "84543ee",
    "subject": "chore: remove example from source code",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "851d0eb",
    "subject": "chore: add package description",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "e7759c1",
    "subject": "docs: update docs",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "9b0bc81",
    "subject": "chore: remove template pages",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "4d04ec9",
    "subject": "fix: docs sitemap filter",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "d117ac4",
    "subject": "chore: filter test pages from sitemap",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "95b1979",
    "subject": "chore: add keywords",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "1da9a4e",
    "subject": "chore: add license and readme for @wroud/di",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "10c7455",
    "subject": "fix: adjust memory threshold for GC",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "3037269",
    "subject": "chore: add logo",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "201aba6",
    "subject": "feat: adjust SEO in docs",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "c5ff8f6",
    "subject": "fix: docs logo styles in light theme",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "0a14136",
    "subject": "feat: add logo to docs",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "cdb9148",
    "subject": "chore: update docs and add GA",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "1eef8d6",
    "subject": "chore: bump version",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "5286029",
    "subject": "docs: complete base articles",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "eceb0c4",
    "subject": "chore: update version",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "b6a45ff",
    "subject": "fix: proper error message while resolving scoped dependency for singleton service",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "61c73bf",
    "subject": "chore: specify files list",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "ff3238e",
    "subject": "fix: update types",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "93c4640",
    "subject": "chore: update version",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "d7517cc",
    "subject": "fix: version lazy loading leads to incorrect badge on first render",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "f98f7b1",
    "subject": "docs: collect jest statistic for provided package",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "6d43540",
    "subject": "feat: add strict types to ServicesRegistry.register",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "25845a7",
    "subject": "fix(tests): add logs to console",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "ea20107",
    "subject": "chore(tests): increase memory threshold",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "013ed92",
    "subject": "chore: add coverage badge",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "1a8cd2f",
    "subject": "fix: ci-cd",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "d95c6d4",
    "subject": "fix: ci-cd",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "57eee77",
    "subject": "fix: ci-cd",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "b931c2c",
    "subject": "fix: ci-cd",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "ab52910",
    "subject": "fix: workflow",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "2d55876",
    "subject": "tests: add json-summary reporter",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "1dca2b4",
    "subject": "tests: add some tests and badges",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "7720341",
    "subject": "fix: build docs separately",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "193d9c3",
    "subject": "chore: update build process",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "6fb62f9",
    "subject": "docs: add installation section",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "83012a5",
    "subject": "fix(docs): link to the di overview page",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "07932df",
    "subject": "chore: update version",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "45d8572",
    "subject": "chore: add homepage and repository to package.json",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "beca909",
    "subject": "chore: update exports",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "fc9ef0f",
    "subject": "docs: add dependency injection overview page",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "83d3093",
    "subject": "fix: pages deploy workflow",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "f193d85",
    "subject": "feat: add github pages",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "83108bd",
    "subject": "fix: return publish package dir",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "e3c1a3b",
    "subject": "chore: bump version",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "5ebef39",
    "subject": "feat: add module and types",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "ae35e9f",
    "subject": "fix: add version",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "ee089fa",
    "subject": "fix: publish workflow",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Alexey",
    "body": "feat: add cache cleanup action",
    "hash": "8a420ab",
    "subject": "Merge pull request #3 from Wroud/fix/add-cleanup",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "0c4a86d",
    "subject": "feat: add cache cleanup action",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Alexey",
    "body": "feat: add github workflows",
    "hash": "9d0965e",
    "subject": "Merge pull request #2 from Wroud/feat/github-workflows",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "41d0e01",
    "subject": "fix: codecov ci",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "62aec5f",
    "subject": "fix: collect coverage",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "cf9454d",
    "subject": "feat: configure code coverage",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "0d675f9",
    "subject": "feat: enable zero installs",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "a8879c6",
    "subject": "fix: remove dist",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "c27dbf0",
    "subject": "fix: configure ci",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "e92166a",
    "subject": "feat: add github workflows",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Alexey",
    "body": "feat: init workspace",
    "hash": "9777ef5",
    "subject": "Merge pull request #1 from Wroud/feat/init-workspace",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "1306e07",
    "subject": "feat: init workspace",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Alexey",
    "body": "",
    "hash": "efd26d4",
    "subject": "Initial commit",
    "tags": [],
    "trailers": [],
  },
]
`;

exports[`getGitCommits > with path 1`] = `
[
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "some long description

BREAKING CHANGE: Some breaky change
",
    "hash": "1dfaff1",
    "subject": "test(git): test commit with something",
    "tags": [
      "v1.0.5",
      "v1.0.1",
    ],
    "trailers": [
      {
        "token": "fix",
        "value": "#123",
      },
    ],
  },
]
`;

exports[`getGitCommits > without arguments 1`] = `
[
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "some long description

BREAKING CHANGE: Some breaky change
",
    "hash": "1dfaff1",
    "subject": "test(git): test commit with something",
    "tags": [
      "v1.0.5",
      "v1.0.1",
    ],
    "trailers": [
      {
        "token": "fix",
        "value": "#123",
      },
    ],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "5a84e8d",
    "subject": "chore: disable auto release",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "github-actions[bot]@users.noreply.github.com",
    "authorName": "github-actions[bot]",
    "body": "",
    "hash": "cde6098",
    "subject": "chore: release @wroud/di@0.9.1",
    "tags": [
      "di-v0.9.1",
    ],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "26768a0",
    "subject": "fix: add automated releases",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "ca0db97",
    "subject": "feat: update github workflows",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "d9774d6",
    "subject": "ci: inherit secrets in workflows",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "afa7fd3",
    "subject": "chore: fix readme",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "github-actions[bot]@users.noreply.github.com",
    "authorName": "github-actions[bot]",
    "body": "",
    "hash": "1624c31",
    "subject": "chore: release @wroud/di@0.9.0",
    "tags": [
      "di-v0.9.0",
    ],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "0848e0a",
    "subject": "ci: fix workflows",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "82e92ef",
    "subject": "ci: enable corepack",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "3e25589",
    "subject": "chore: remove yarn cache",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "2c35601",
    "subject": "ci: update dependencies and github workflows",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "0c0e299",
    "subject": "chore: remove test from readme",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "02df602",
    "subject": "ci: rewrite bump resolver",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "github-actions[bot]@users.noreply.github.com",
    "authorName": "github-actions[bot]",
    "body": "",
    "hash": "e801bdb",
    "subject": "chore: release @wroud/di@0.8.5",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "d824036",
    "subject": "ci: add package name to releases",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "01e09a8",
    "subject": "ci: properly handle errors",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "c3378cc",
    "subject": "ci: commit as github actions bot",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "github-actions@github.com",
    "authorName": "github-actions",
    "body": "",
    "hash": "041d000",
    "subject": "chore: release 0.8.4",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "cc0fe8a",
    "subject": "ci: trigger update",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "b58a7dd",
    "subject": "ci: configure publishing github releases",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "github-actions@github.com",
    "authorName": "github-actions",
    "body": "",
    "hash": "e514809",
    "subject": "chore: release 0.8.3",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "48cc6f1",
    "subject": "ci: filter release commit only for bump check",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "github-actions@github.com",
    "authorName": "github-actions",
    "body": "",
    "hash": "a80b948",
    "subject": "chore: release 0.8.2",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "4262c3b",
    "subject": "chore: push annotated tags",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "github-actions@github.com",
    "authorName": "github-actions",
    "body": "",
    "hash": "a251066",
    "subject": "chore: release 0.8.1",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "fc02a0d",
    "subject": "chore: trigger release",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "github-actions@github.com",
    "authorName": "github-actions",
    "body": "",
    "hash": "9ff54fc",
    "subject": "chore: release 0.8.0",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "a9443ec",
    "subject": "ci: push fixed tag",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "github-actions@github.com",
    "authorName": "github-actions",
    "body": "",
    "hash": "55a315c",
    "subject": "chore: release 0.7.0",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "4a6430d",
    "subject": "chore: add changelog for di",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "github-actions@github.com",
    "authorName": "github-actions",
    "body": "",
    "hash": "5a14585",
    "subject": "chore: release 0.6.0",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Alexey",
    "body": "* chore: rebase

* test: fix tests",
    "hash": "f9f8224",
    "subject": "chore: rebase (#15)",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Alexey",
    "body": "* ci: configure gulp

* ci: read package version directly

* ci: skip release commits

* ci: enable github releases

* ci: remove changelog",
    "hash": "d2ea47b",
    "subject": "Ci/configure gulp for ci (#14)",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "github-actions@github.com",
    "authorName": "github-actions",
    "body": "",
    "hash": "e0dd0e5",
    "subject": "chore: release undefined",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Alexey",
    "body": "* ci: configure gulp

* ci: read package version directly

* ci: skip release commits",
    "hash": "5b43fb0",
    "subject": "Ci/configure gulp for ci (#13)",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "github-actions@github.com",
    "authorName": "github-actions",
    "body": "",
    "hash": "dc0f7d0",
    "subject": "chore: release undefined",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Alexey",
    "body": "* ci: configure gulp

* ci: read package version directly",
    "hash": "3ef2856",
    "subject": "Ci/configure gulp for ci (#12)",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Alexey",
    "body": "",
    "hash": "f6d4755",
    "subject": "ci: configure gulp (#11)",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Alexey",
    "body": "",
    "hash": "cf5ef0c",
    "subject": "ci: add empty placeholder command ci:prepublish (#10)",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "github-actions@github.com",
    "authorName": "github-actions",
    "body": "",
    "hash": "d8a8ebe",
    "subject": "Release di-v0.5.0",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Alexey",
    "body": "* ci: fail on empty commits

* ci: commit lockfile",
    "hash": "71d3bf2",
    "subject": "ci: fail on empty commits (#9)",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "github-actions@github.com",
    "authorName": "github-actions",
    "body": "",
    "hash": "bd5311a",
    "subject": "Release v0.4.3",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "github-actions@github.com",
    "authorName": "github-actions",
    "body": "",
    "hash": "ff36f54",
    "subject": "Release v0.4.2",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "github-actions@github.com",
    "authorName": "github-actions",
    "body": "",
    "hash": "231a0aa",
    "subject": "Release v0.4.1",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "github-actions@github.com",
    "authorName": "github-actions",
    "body": "",
    "hash": "5dfac88",
    "subject": "Release v0.4.0",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Alexey",
    "body": "",
    "hash": "e839687",
    "subject": "ci: run prepublish scripts",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "github-actions@github.com",
    "authorName": "github-actions",
    "body": "",
    "hash": "c15cea7",
    "subject": "Release v0.3.1",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "github-actions@github.com",
    "authorName": "github-actions",
    "body": "",
    "hash": "5591856",
    "subject": "Release v0.3.0",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Alexey",
    "body": "* ci: run prepublish scripts

* ci: use different method for brunch detection

* ci: fix release workflow

* ci: setup path to vitest config

* ci: configure github actions commit",
    "hash": "6bf7753",
    "subject": "Ci/run prepublish scripts (#7)",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Alexey",
    "body": "* ci: run prepublish scripts

* ci: use different method for brunch detection

* ci: fix release workflow

* ci: setup path to vitest config",
    "hash": "82d6875",
    "subject": "Ci/run prepublish scripts (#6)",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Alexey",
    "body": "* ci: run prepublish scripts

* ci: use different method for brunch detection",
    "hash": "b24e2c2",
    "subject": "ci: run prepublish scripts (#5)",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Alexey",
    "body": "* ci: add changelog and automatic releases

* ci: coverage report fix

* ci: sanitize branch name in github workflows",
    "hash": "c5af8e3",
    "subject": "ci: add changelog and automatic releases (#4)",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "d31ce7b",
    "subject": "chore(di-react): optimize useAbandonedRenderDisposer timeout",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "ccfac38",
    "subject": "chore(react): update readme",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "dedfddd",
    "subject": "chore: update docs",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "717c44e",
    "subject": "chore: update docs for di",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "0a79da6",
    "subject": "chore: Update @wroud/di-react package version to 0.0.2 and add React bindings for DI",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "65698ad",
    "subject": "chore: Update package versions for @wroud/di-tools-analyzer, @wroud/di-tools-codemod, and @wroud/di to 0.1.0, 0.1.0, and 0.2.0 respectively",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "fcf6004",
    "subject": "chore: update deps",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "5cb14f4",
    "subject": "chore(di-react): add react bindings for di",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "30807d4",
    "subject": "chore(di): reorganize exports",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "8615243",
    "subject": "chore: update imports for di-tools-analyzer",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "4e236f3",
    "subject": "chore: update exports",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "74656a2",
    "subject": "chore: add documentation about lazy",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "0a74691",
    "subject": "chore: Update @wroud/di package to version 0.1.5 and include production module",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "392170e",
    "subject": "chore: Bump @wroud/di version to 0.1.4",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "1023ebc",
    "subject": "chore: add better debugging and optimized production build",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "8e5da34",
    "subject": "chore: Fix import in injectable.test.ts",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "6c78545",
    "subject": "chore: update unit tests",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "2f82db3",
    "subject": "chore: Update @wroud/di to version 0.1.3",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "0e80287",
    "subject": "chore: Exclude test files from package build",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "6357a3a",
    "subject": "chore: Update @wroud/di to version 0.1.2",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "e7c2505",
    "subject": "chore: update dependencies",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "258b0ec",
    "subject": "chore: bump version @wroud/di to 0.1.1",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "0d861be",
    "subject": "chore: rename diLazy -> lazy",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "b3fb16c",
    "subject": "chore: update vitest to 2 version",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "5d407ee",
    "subject": "chore: bump version @wroud/di to 0.1.0",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "792d6b6",
    "subject": "feat: lazy implementation loading",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "387a1fc",
    "subject": "chore: rename IServiceImplementation to ISyncServiceImplementation",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "65bf5af",
    "subject": "chore: split logic",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "7dbff6d",
    "subject": "chore: rename configs",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "d5ac8c0",
    "subject": "fix: ci-cd",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "dcf424a",
    "subject": "fix: tsconfig",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "802ee0c",
    "subject": "chore: update yarn.lock",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "412907f",
    "subject": "chore: migrate to vitest",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "0c7228a",
    "subject": "fix: cyclic dependencies detection",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "43a43b5",
    "subject": "fix: change package type",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "6773df2",
    "subject": "chore: change output to commonjs",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "4672641",
    "subject": "fix: run as common js module",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "6ed140b",
    "subject": "chore: update dependencies",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "b392ebf",
    "subject": "chore: update bin",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "b65f7e9",
    "subject": "fix: exports",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "1c4c04c",
    "subject": "feat: @wroud/di-tools-codemod",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "712d055",
    "subject": "chore: bump \`@wroud/di-tools-analyzer\` version",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "e5142e0",
    "subject": "docs: ModuleRegistry api",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "d7ef251",
    "subject": "feat: add full screen mode for di analyzer",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "52276d5",
    "subject": "docs: add documentation for @wroud/di-tools-analyzer",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "5e5e195",
    "subject": "fix: robots.txt name",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "19bdf3b",
    "subject": "feat: add robots.txt",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "f40e2f7",
    "subject": "chore: tune layout",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "3aa1529",
    "subject": "fix: graph example",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "6379e3f",
    "subject": "feat: move graph to another page",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "5ce1124",
    "subject": "feat: add di analyzer",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "cf852fa",
    "subject": "docs: remove extra",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "5f55b1c",
    "subject": "docs: make examples simpler",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "f76c015",
    "subject": "docs: simplify samples",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "33c7dd4",
    "subject": "docs: add "Why DI?" page",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "2f89822",
    "subject": "chore: move tsconfig to separate package",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "84543ee",
    "subject": "chore: remove example from source code",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "851d0eb",
    "subject": "chore: add package description",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "e7759c1",
    "subject": "docs: update docs",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "9b0bc81",
    "subject": "chore: remove template pages",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "4d04ec9",
    "subject": "fix: docs sitemap filter",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "d117ac4",
    "subject": "chore: filter test pages from sitemap",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "95b1979",
    "subject": "chore: add keywords",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "1da9a4e",
    "subject": "chore: add license and readme for @wroud/di",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "10c7455",
    "subject": "fix: adjust memory threshold for GC",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "3037269",
    "subject": "chore: add logo",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "201aba6",
    "subject": "feat: adjust SEO in docs",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "c5ff8f6",
    "subject": "fix: docs logo styles in light theme",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "0a14136",
    "subject": "feat: add logo to docs",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "cdb9148",
    "subject": "chore: update docs and add GA",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "1eef8d6",
    "subject": "chore: bump version",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "5286029",
    "subject": "docs: complete base articles",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "eceb0c4",
    "subject": "chore: update version",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "b6a45ff",
    "subject": "fix: proper error message while resolving scoped dependency for singleton service",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "61c73bf",
    "subject": "chore: specify files list",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "ff3238e",
    "subject": "fix: update types",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "93c4640",
    "subject": "chore: update version",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "d7517cc",
    "subject": "fix: version lazy loading leads to incorrect badge on first render",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "f98f7b1",
    "subject": "docs: collect jest statistic for provided package",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "6d43540",
    "subject": "feat: add strict types to ServicesRegistry.register",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "25845a7",
    "subject": "fix(tests): add logs to console",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "ea20107",
    "subject": "chore(tests): increase memory threshold",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "013ed92",
    "subject": "chore: add coverage badge",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "1a8cd2f",
    "subject": "fix: ci-cd",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "d95c6d4",
    "subject": "fix: ci-cd",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "57eee77",
    "subject": "fix: ci-cd",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "b931c2c",
    "subject": "fix: ci-cd",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "ab52910",
    "subject": "fix: workflow",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "2d55876",
    "subject": "tests: add json-summary reporter",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "1dca2b4",
    "subject": "tests: add some tests and badges",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "7720341",
    "subject": "fix: build docs separately",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "193d9c3",
    "subject": "chore: update build process",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "6fb62f9",
    "subject": "docs: add installation section",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "83012a5",
    "subject": "fix(docs): link to the di overview page",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "07932df",
    "subject": "chore: update version",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "45d8572",
    "subject": "chore: add homepage and repository to package.json",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "beca909",
    "subject": "chore: update exports",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "fc9ef0f",
    "subject": "docs: add dependency injection overview page",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "83d3093",
    "subject": "fix: pages deploy workflow",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "f193d85",
    "subject": "feat: add github pages",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "83108bd",
    "subject": "fix: return publish package dir",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "e3c1a3b",
    "subject": "chore: bump version",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "5ebef39",
    "subject": "feat: add module and types",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "ae35e9f",
    "subject": "fix: add version",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "ee089fa",
    "subject": "fix: publish workflow",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Alexey",
    "body": "feat: add cache cleanup action",
    "hash": "8a420ab",
    "subject": "Merge pull request #3 from Wroud/fix/add-cleanup",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "0c4a86d",
    "subject": "feat: add cache cleanup action",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Alexey",
    "body": "feat: add github workflows",
    "hash": "9d0965e",
    "subject": "Merge pull request #2 from Wroud/feat/github-workflows",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "41d0e01",
    "subject": "fix: codecov ci",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "62aec5f",
    "subject": "fix: collect coverage",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "cf9454d",
    "subject": "feat: configure code coverage",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "0d675f9",
    "subject": "feat: enable zero installs",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "a8879c6",
    "subject": "fix: remove dist",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "c27dbf0",
    "subject": "fix: configure ci",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "e92166a",
    "subject": "feat: add github workflows",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Alexey",
    "body": "feat: init workspace",
    "hash": "9777ef5",
    "subject": "Merge pull request #1 from Wroud/feat/init-workspace",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Aleksei Potsetsuev",
    "body": "",
    "hash": "1306e07",
    "subject": "feat: init workspace",
    "tags": [],
    "trailers": [],
  },
  {
    "authorEmail": "wrouds@gmail.com",
    "authorName": "Alexey",
    "body": "",
    "hash": "efd26d4",
    "subject": "Initial commit",
    "tags": [],
    "trailers": [],
  },
]
`;
